Test coverage and sonar fixes